# Cook-The-Cookie-Editor

./: CMakeLists.txt  LICENSE  README.md
.ccls-cache/@@home@megu@Programming@c@cookie_editor/: @usr@include@alloca.h.blob  @usr@include@asm-generic@ioctl.h.blob  @usr@include@asm-generic@ioctls.h.blob  @usr@include@asm@ioctl.h.blob  @usr@include@asm@ioctls.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@confname.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@environments.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@getopt_core.h.blob  @usr@include@bits@getopt_posix.h.blob  @usr@include@bits@ioctl-types.h.blob  @usr@include@bits@ioctls.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@posix_opt.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@select.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdlib-float.h.blob  @usr@include@bits@struct_mutex.h.blob  @usr@include@bits@struct_rwlock.h.blob  @usr@include@bits@termios-baud.h.blob  @usr@include@bits@termios-c_cc.h.blob  @usr@include@bits@termios-c_cflag.h.blob  @usr@include@bits@termios-c_iflag.h.blob  @usr@include@bits@termios-c_lflag.h.blob  @usr@include@bits@termios-c_oflag.h.blob  (+37 more)
include/: cook.h  init_functions.h  output_functions.h  terminal_functions.h
src/: cook.c  init_functions.c  input_functions.c  output_functions.c  terminal_functions.c
(+11 files in other folders)
